# hookman

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
crates/: README.md
crates/app_back/: Cargo.toml
crates/app_back/src/: main.rs
crates/app_back/src/api/: arg_config.rs  mod.rs
crates/app_desktop_tauri/: Cargo.toml  tauri.conf.json
crates/app_desktop_tauri/src/: lib.rs  main.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  models.rs  ports.rs  services.rs
crates/domain/src/facade/: api_service.rs  mod.rs  webhook_service.rs
crates/domain/src/model/: endpoint.rs  mod.rs  persistence.rs  webhook.rs
crates/domain/src/ports/: mod.rs  notifier.rs  persistence.rs
crates/migration/: Cargo.toml  README.md
crates/migration/src/: lib.rs  m20250306_193454_create_postgres_enum_for_http_method.rs  m20250306_193454_create_postgres_enums.rs  m20250306_193522_create_public_endpoint_table.rs  m20250306_193530_create_public_requests_table.rs  m20250314_045815_add_endpoint_actions.rs
crates/migration/src/endpoint/: mod.rs
crates/migration/src/request/: mod.rs
crates/primary_adapter_rest/: Cargo.toml
crates/primary_adapter_rest/src/: lib.rs
crates/primary_adapter_rest/src/model/: mod.rs
crates/primary_adapter_webhook/: Cargo.toml
crates/primary_adapter_webhook/src/: error_response.rs  lib.rs  macros.rs  routes.rs
crates/secondary_adapter_notifier_tokio_channel/: Cargo.toml
crates/secondary_adapter_notifier_tokio_channel/src/: lib.rs
crates/secondary_adapter_persistence_seaorm/: Cargo.toml
crates/secondary_adapter_persistence_seaorm/src/: lib.rs  mapper.rs
crates/secondary_adapter_persistence_seaorm/src/entity/: endpoint.rs  endpoint_action_settings.rs  mod.rs  path.rs  prelude.rs  public_endpoint.rs  public_request.rs  received_requests.rs  request.rs  sea_orm_active_enums.rs
src/: app.css
src/lib/: EndpointAddModal.svelte  EndpointSettingsModal.svelte  EndpointTopBar.svelte  MyModal.svelte  RequestDetails.svelte  RequestSideBar.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/settings/: +page.svelte
src/types/: endpoints.ts  events.ts  global.d.ts  requests.ts
