[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.86"
serde = { version = "1", features = ["derive"] }
uuid = {version = "1.15.1", features = ["v4", "serde"]}
serde_json = "1"