[package]
name = "hookman"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hookman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = {version = "2", features = []}
tauri-plugin-opener = "2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }

primary_adapter_webhook= {path = "../primary_adapter_webhook" }
primary_adapter_rest= {path = "../primary_adapter_rest" }
domain = {path = "../domain" }

tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
secondary_adapter_persistence_seaorm = {path = "../secondary_adapter_persistence_seaorm" }
secondary_adapter_notifier_tokio_channel = {path = "../secondary_adapter_notifier_tokio_channel" }
uuid = { version = "1.15.1", features = ["v4"] }
