[package]
name = "primary_adapter_rest"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO organize loggers
log = "0.4"
actix-web = "4"
derive_more = { version = "2.0.1", features = ["display", "error"] }

tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

domain = { path = "../domain" }
