[package]
name = "secondary_adapter_persistence_seaorm"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO organize loggers
log = "0.4"

sea-orm = { version = "1.1.6", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }

async-trait = { workspace = true }
serde_json = { workspace = true }
migration = { path = "../migration" }
domain = { path = "../domain" }
